--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="flashing-title">Hot BeansWeb</h1>
+        <h1 class="flashing-title">Hot Beans Web</h1>
     </header>
     <nav>
         <ul>
@@ -20,8 +20,17 @@
         </ul>
     </nav>
     <main>
-      <div class="content-div">
-        <p>Welcome to Hot Beans, your go-to setination for top-noych web development services, We are a passionate team of seasoned developers and designers dedicated to creating dynamic, user-friendly, and visually stunning websites. Our mission is to provide custom website development, robust e-commerce solutions, responsive design, SEO optimization, and ongoing maintenance and support. With a focus on innovation and a customer-centric approach, We ensure that every website we build is a perfect blend of aesthetics and functionality, tailored to meeet your unique business needs. At Hot Beans, we brew your ideas into digital reality, helping you stand out in the crowded online landscape.  </p>
+      <div class="content-div-about">
+        <h1>About Us</h1>
+        <p class="p-aboutus">Welcome to Hot Beans, your go-to section for top-notch web development services, 
+            We are a passionate team of seasoned developers and designers dedicated to create dynamic, 
+            user-friendly, and visually stunning websites. Our mission is to provide custom website development, 
+            robust e-commerce solutions, responsive design, SEO optimization, and ongoing maintenance and support. 
+            With a focus on innovation and a customer-centric approach, we ensure that every website we build is a perfect blend of aesthetics and functionality, 
+            tailored to meet your unique business needs. At Hot Beans, we brew your ideas into digital reality, helping you stand out in the crowded online landscape.  </p>
+        </div>
+        <div>
+            <img src="pictures/HBW-about-pic.png" width="45%" alt="">
         </div>
     </main>
     <footer>
