--- a/courses.html
+++ b/courses.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="flashing-title">Hot BeansWeb</h1>
+        <h1 class="flashing-title">Hot Beans Web</h1>
     </header>
     <nav>
         <ul>
@@ -25,15 +25,15 @@
         <p class="p-courses">Here are our courses please select the one that is suitable for you</p>
         <div class="courses-grid">
             <div class="course-content">
-                <img src="/pictures/W3sIcon.png" width="550px" height="650px" alt="">
+                <img src="pictures/W3sIcon.png" width="550px" height="650px" alt="">
                 <button class="btn-courses">Select</button>
             </div>
             <div class="course-content">
-                <img src="/pictures/UdemyIcon.png" width="550px" height="650px" alt="">
+                <img src="pictures/UdemyIcon.png" width="550px" height="650px" alt="">
                 <button class="btn-courses">Select</button>
             </div>
             <div class="course-content">
-                <img src="/pictures/fCodeIcon.png" width="550px" height="650px" alt="">
+                <img src="pictures/fCodeIcon.png" width="550px" height="650px" alt="">
                 <button class="btn-courses">Select</button>
             </div>
 
