--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="flashing-title">Hot BeansWeb</h1>
+        <h1 class="flashing-title">Hot Beans Web</h1>
     </header>
     <nav>
         <ul>
@@ -20,8 +20,11 @@
         </ul>
     </nav>
     <main>
-      <div class="content-div">
-       <img src="logo/Black and Blue Simple Creative Illustrative Dragons E-Sport Logo.png" alt="">
+        <div>
+            <h1>Welcome to Hot Beans Web</h1>
+        </div>
+      <div class="content-div-bg">
+       <img src="logo/Black and Blue Simple Creative Illustrative Dragons E-Sport Logo.png" alt="" class="logo">
         </div>
     </main>
     <footer>
