--- a/Jobs.html
+++ b/Jobs.html
@@ -22,23 +22,25 @@
     </nav>
 
     <section class="content-div__courses">
-        <h1 class="heading-courses">Courses</h1>
-        <p class="p-courses">Here are our courses please select the one that is suitable for you</p>
-        <div class="courses-grid">
+        <h1 class="heading-courses">Jobs</h1>
+        <p class="p-courses">We offer a wide selection of jobs related to the design and development of websites.
+            Creating and maintaining a website involves a team of skilled professionals. Web developers (front-end and back-end) build the site’s structure and functionality, while web designers ensure it is visually appealing and user-friendly.</p>
+        <p>(some of these Jobs require High quality degrees to be accepted)</p>
+            <div class="courses-grid">
 
             <div class="course-content">
-                <img src="pictures/W3sIcon.png" width="550px" height="650px" alt="">
-            <a href="https://campus.w3schools.com/collections/course-catalog" target="_blank">Select</a>
+                <img src="pictures/remote.png" width="550px" height="650px" alt="">
+            <a href="https://remote.com/openings" target="_blank">Select</a>
             </div>
 
             <div class="course-content">
-                <img src="pictures/UdemyIcon.png" width="550px" height="650px" alt="">
-                <a href="https://www.udemy.com/?utm_source=adwords&utm_medium=udemyads&utm_campaign=Brand-Topic_la.EN_cc.UK&campaigntype=Search&portfolio=BrandTopic&language=EN&product=Course&test=&audience=Keyword&topic=&priority=&utm_content=deal4584&utm_term=_._ag_137420172138_._ad_595700732355_._kw_udemy_._de_c_._dm__._pl__._ti_kwd-30719151476_._li_1006886_._pd__._&matchtype=b&gad_source=1&gclid=EAIaIQobChMIheHVobf2hgMVF3N_AB1BxgzMEAAYASAAEgKMb_D_BwE" target="_blank">Select</a>
+                <img src="pictures/smartjobboard.png" width="550px" height="650px" alt="">
+                <a href="https://www.smartjobboard.com/" target="_blank">Select</a>
             </div>
 
             <div class="course-content">
-                <img src="pictures/fCodeIcon.png" width="550px" height="650px" alt="">
-                <a href="https://www.freecodecamp.org/news/tag/online-courses/" target="_blank">Select</a>
+                <img src="pictures/Jboard.png" width="550px" height="650px" alt="">
+                <a href="https://jboard.io/" target="_blank">Select</a>
             </div>
 
         </div>
