--- a/team.html
+++ b/team.html
@@ -17,6 +17,7 @@
             <li><a href="team.html">Team</a></li>
             <li><a href="courses.html">Courses</a></li>
             <li><a href="registration.html">Registration</a></li>
+            <li><a href="Jobs.html">Jobs</a></li>
         </ul>
     </nav>
     <main>
