--- a/courses.html
+++ b/courses.html
@@ -17,7 +17,7 @@
             <li><a href="team.html">Team</a></li>
             <li><a href="courses.html">Courses</a></li>
             <li><a href="registration.html">Registration</a></li>
-            <li><a href="Jobs.html">Jobs</a></li>
+            <li><a href="job-description.html">Job description</a></li>
         </ul>
     </nav>
 
